// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar Shows background 1`] = `
<div
  className="Navbar Navbar-default"
  style={
    Object {
      "position": "relative",
    }
  }
>
  <Component
    className="Navbar-logo-link"
    onClick={[Function]}
    to="/"
  >
    <img
      alt="Logo"
      className="Navbar-logo"
      src="logo_accent_nobg.svg"
    />
  </Component>
  <div
    className="Navbar-link-container"
  >
    <Component
      className="Navbar-link"
      key="analysis"
      onClick={[Function]}
      to="/analysis"
    >
      analysis
    </Component>
    <Component
      className="Navbar-link"
      key="help"
      onClick={[Function]}
      to="/help"
    >
      help
    </Component>
  </div>
</div>
`;

exports[`Navbar Small screen 1`] = `
<div
  className="Navbar Navbar-default"
  style={
    Object {
      "position": "relative",
    }
  }
>
  <Component
    className="Navbar-logo-link"
    onClick={[Function]}
    to="/"
  >
    <img
      alt="Logo"
      className="Navbar-logo"
      src="logo_accent_nobg.svg"
    />
  </Component>
  <div
    className="Navbar-link-container"
  >
    <Popover
      content={
        <div
          className="Navbar-menu-items"
        >
          <Unknown
            className="Navbar-link"
            onClick={[Function]}
            to="/analysis"
          >
            analysis
          </Unknown>
          <Unknown
            className="Navbar-link"
            onClick={[Function]}
            to="/help"
          >
            help
          </Unknown>
        </div>
      }
      mouseEnterDelay={0.1}
      mouseLeaveDelay={0.1}
      overlayStyle={Object {}}
      placement="leftBottom"
      prefixCls="ant-popover"
      transitionName="zoom-big"
      trigger="click"
    >
      <FontAwesomeIcon$1
        border={false}
        className="Navbar-menu"
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              448,
              512,
              Array [],
              "f0c9",
              "M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z",
            ],
            "iconName": "bars",
            "prefix": "fas",
          }
        }
        listItem={false}
        mask={null}
        name=""
        pull={null}
        pulse={false}
        rotation={null}
        size={null}
        spin={false}
        symbol={false}
        transform={null}
      />
    </Popover>
  </div>
</div>
`;

exports[`Navbar Transparent background 1`] = `
<div
  className="Navbar Navbar-transparent"
  style={
    Object {
      "position": "relative",
    }
  }
>
  <Component
    className="Navbar-logo-link"
    onClick={[Function]}
    to="/"
  >
    <img
      alt="Logo"
      className="Navbar-logo"
      src="logo_nobg.svg"
    />
  </Component>
  <div
    className="Navbar-link-container"
  >
    <Component
      className="Navbar-link"
      key="analysis"
      onClick={[Function]}
      to="/analysis"
    >
      analysis
    </Component>
    <Component
      className="Navbar-link"
      key="help"
      onClick={[Function]}
      to="/help"
    >
      help
    </Component>
  </div>
</div>
`;
